[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/bird_red_0.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/bird_orange_1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/bird_blue_2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/bird_orange_2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/bird_orange_0.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/bird_red_1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/bird_blue_1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/bird_red_2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/bird_blue_0.png" type="Texture" id=9]
[ext_resource path="res://assets/scripts/Bird.gd" type="Script" id=10]
[ext_resource path="res://assets/audio/die.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/hit.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/wing.ogg" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "blue",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "red",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "yellow",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.9675
height = 9.85953

[node name="Bird" type="RigidBody2D"]
gravity_scale = 3.5
script = ExtResource( 10 )

[node name="BirdSprites" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "yellow"
frame = 2
playing = true

[node name="BirdColBox" type="CollisionShape2D" parent="."]
position = Vector2( 0.794598, 0.132433 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="FlapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="body_entered" from="." to="." method="_on_Bird_body_entered"]
